<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <TextView
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:gravity="center"
        android:text="@string/dateOfBirth" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:text="@string/gender"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/login_border"/>
    <TextView
        android:id="@+id/weight"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:text="@string/weight"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/login_border"/>
    <TextView
        android:id="@+id/height"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:text="@string/height"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/login_border"/>

    <TextView
        android:id="@+id/desiredWeight"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:text="@string/desiredWeight"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/login_border"/>

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/subscribe"
        android:textColor="#FFFFFF"
        android:textSize="19sp"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="LOGOUT"
        android:textColor="#FFFFFF"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/searchUser"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/login_border"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/searchProfileButton"
        android:layout_width="75dp"
        android:layout_height="52dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/profileSearch"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:visibility="invisible"/>

</FrameLayout>