<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="101dp"
        android:layout_height="52dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:text="@string/username"
        android:gravity="center"
        android:background="@drawable/login_border"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:text="@string/password"
        android:gravity="center"
        android:background="@drawable/login_border"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="233dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/createAccount"
        android:textColor="#000000"
        android:textSize="15sp" />

</FrameLayout>